vcl/osx/vclnsapp.mm
@@ -96,6 +96,17 @@
         NSWindow* pKeyWin = [NSApp keyWindow];
         if( pKeyWin && [pKeyWin isKindOfClass: [SalFrameWindow class]] )
         {
+            // Commit uncommitted text before dispatching key shortcuts. In
+            // certain cases such as pressing Command-Option-C in a Writer
+            // document while there is uncommitted text will call
+            // AquaSalFrame::EndExtTextInput() which will dispatch a
+            // SalEvent::EndExtTextInput event. Writer's handler for that event
+            // will delete the uncommitted text and then insert the committed
+            // text but LibreOffice will crash when deleting the uncommitted
+            // text because deletion of the text also removes and deletes the
+            // newly inserted comment.
+            [static_cast<SalFrameWindow*>(pKeyWin) endExtTextInput];
+
             AquaSalFrame* pFrame = [static_cast<SalFrameWindow*>(pKeyWin) getSalFrame];
             unsigned int nModMask = ([pEvent modifierFlags] & (NSEventModifierFlagShift|NSEventModifierFlagControl|NSEventModifierFlagOption|NSEventModifierFlagCommand));
             /*
